--- a/projects/mainprojects/drage-chat/index.html
+++ b/projects/mainprojects/drage-chat/index.html
@@ -35,9 +35,12 @@
 
 
   <br>
-  <div class="alert alert-danger alert-dismissible fade show">
-    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-    <strong>Systems Down</strong> There is currently an issue with our servers. We will be back once we have patched the issue... This may take a few hours.
+  <div class="container mt-3">
+    <div class="alert alert-danger alert-dismissible fade show">
+      <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+      <strong>Systems Down</strong> There is currently an issue with our servers. We will be back once we have patched
+      the issue... This may take a few hours.
+    </div>
   </div>
 
   
