--- a/projects/mainprojects/drage-chat/index.html
+++ b/projects/mainprojects/drage-chat/index.html
@@ -51,7 +51,7 @@
     <h1 class="text-center font-bold" style="font-size: xx-large;">Join Chat</h1>
     <div class="flex space-x-1">
       <input id="usernameInput" type="text" class="bg-white border border-gray-200 rounded-md px-2"
-        placeholder="Enter a Username" />
+        placeholder="Enter a Username" maxlength="15"/>
       <button id="joinButton" class="bg-indigo-600 px-2 py-1 text-sm text-white rounded-md">Join</button>
     </div>
     <p>Google&trade; Sign-In <b>Required</b></p>
