--- a/projects/mainprojects/drage-chat/index.html
+++ b/projects/mainprojects/drage-chat/index.html
@@ -9,6 +9,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none';" /> -->
   <style>
     .showUserId {
       font-family: monospace;
@@ -21,44 +22,46 @@
       overflow-x: hidden;
       overflow-y: auto;
     }
+
     #chatsView {
-      width: 400px !important; 
+      width: 400px !important;
     }
 
-    #scrollbutton{
+    #scrollbutton {
       display: none;
     }
   </style>
 </head>
 
 <body id="body">
-
-
   <br>
   <div class="container mt-3">
-    <div class="alert alert-danger alert-dismissible fade show">
+    <!-- <div class="alert alert-danger alert-dismissible fade show">
       <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
       <strong>Systems Down</strong> There is currently an issue with our servers. We will be back once we have patched
       the issue... This may take a few hours.
+    </div> -->
+    <div class="alert alert-info alert-dismissible fade show">
+      <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+      <strong>Info!</strong> The servers are back up, you can check the status <a
+        href="https://drageno01.github.io/?chatstatus"><u>here</u></a>!
     </div>
   </div>
-
-  
-  
-  <script type="module" src="https://drageno01.github.io/projects/mainprojects/drage-chat/publish"></script>
+  <script type="module" src="https://drageno01.github.io/projects/mainprojects/drage-chat/publish.js"></script>
 
   <div id="joinView" class="bg-gray-100 w-96 items-center mx-auto flex flex-col mt-10 rounded-md p-4 space-y-4">
     <h1 class="text-center font-bold" style="font-size: xx-large;">Join Chat</h1>
     <div class="flex space-x-1">
       <input id="usernameInput" type="text" class="bg-white border border-gray-200 rounded-md px-2"
-        placeholder="Enter a Username" maxlength="15"/>
+        placeholder="Enter a Username" maxlength="15" />
       <button id="joinButton" class="bg-indigo-600 px-2 py-1 text-sm text-white rounded-md">Join</button>
     </div>
     <p>Google&trade; Sign-In <b>Required</b></p>
   </div>
 
   <div id="chatsView" class="w-64 h-96 mx-auto flex flex-col mt-10 hidden">
-    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded" id="scrollbutton">Disable Autoscroll</button>
+    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded"
+      id="scrollbutton">Disable Autoscroll</button>
     <div class="messages flex-1 bg-gray-100" id="messageListdiv">
       <ul id="messageList">
         <li>
@@ -99,7 +102,8 @@
       </ul>
     </div>
     <div class="input h-11 w-full flex border border-slate-200 rounded-md">
-      <input id="messageInput" type="text" class="outline-none flex-1 px-1" placeholder="Type a message to send..." maxlength="100"></input>
+      <input id="messageInput" type="text" class="outline-none flex-1 px-1" placeholder="Type a message to send..."
+        maxlength="100"></input>
       <div class="p-1">
         <button id="sendButton" class="bg-indigo-600 p-2 rounded-lg">
           <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="black"
@@ -110,11 +114,16 @@
         </button>
       </div>
     </div>
-    <center><p style="font-size: xx-small;">There is a 100 character limit per message and a 10 second cooldown to prevent spam.</p></center>
+    <center>
+      <p style="font-size: xx-small;">There is a 100 character limit per message and a 10 second cooldown to prevent
+        spam.</p>
+    </center>
   </div>
+
 
   <script>
     window.history.pushState("pageTitle", "DRAGE Chat", "/?chat");
   </script>
 </body>
+
 </html>
