--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
             if(window.location.href == "https://drageno01.github.io/?chat" || window.location.href == "https://drageno01.github.io/#chat"){
                 window.location.replace("https://drageno01.github.io/projects/mainprojects/drage-chat/index.html")
             }
+            if(window.location.href == "https://drageno01.github.io/?chatstatus" || window.location.href == "https://drageno01.github.io/#chatstatus"){
+                window.location.replace("https://drageno01.github.io/projects/mainprojects/drage-chat/status.html")
+            }
         }
     </script>
 </html>
