--- a/projects/mainprojects/drage-chat/status.html
+++ b/projects/mainprojects/drage-chat/status.html
@@ -126,16 +126,13 @@
             <br><br><br>
             <table>
                 <td><h1>Current Status:  </h1></td>
-                <td><div class="timelinebox-yellowgreen" id="tooltip"><span class="tooltiptext">Operational with Limited Features</span></div></td>
+                <td><div class="timelinebox-green" id="tooltip"><span class="tooltiptext">Operational</span></div></td>
             </table>
             <br><br>
             <div class="timelines">
                 <h2>Overall <i style="font-size: x-small;">Past 30 Days</i></h2>
                 <div class="overall">
                     <table>
-                        <td>
-                            <div class="timelinebox" id="tooltip"><span class="tooltiptext">No Data</span></div>
-                        </td>
                         <td>
                             <div class="timelinebox" id="tooltip"><span class="tooltiptext">No Data</span></div>
                         </td>
@@ -224,6 +221,9 @@
                         <td>
                             <div class="timelinebox-yellowgreen" id="tooltip"><span class="tooltiptext">Slight Outage</span></div>
                         </td>
+                        <td>
+                            <div class="timelinebox-green" id="tooltip"><span class="tooltiptext">Operational</span></div>
+                        </td>
                     </table>
                 </div>
                 <br>
@@ -309,14 +309,14 @@
                             <div class="timelinebox" id="tooltip"><span class="tooltiptext">No Data</span></div>
                         </td>
                         <td>
-                            <div class="timelinebox" id="tooltip"><span class="tooltiptext">No Data</span></div>
-                        </td>
-                        <td>
                             <div class="timelinebox-green" id="tooltip"><span class="tooltiptext">Operational</span>
                             </div>
                         </td>
                         <td>
                             <div class="timelinebox-red" id="tooltip"><span class="tooltiptext">Major Outage</span></div>
+                        </td>
+                        <td>
+                            <div class="timelinebox-green" id="tooltip"><span class="tooltiptext">Operational</span></div>
                         </td>
                         <td>
                             <div class="timelinebox-green" id="tooltip"><span class="tooltiptext">Operational</span></div>
@@ -406,9 +406,6 @@
                             <div class="timelinebox" id="tooltip"><span class="tooltiptext">No Data</span></div>
                         </td>
                         <td>
-                            <div class="timelinebox" id="tooltip"><span class="tooltiptext">No Data</span></div>
-                        </td>
-                        <td>
                             <div class="timelinebox-green" id="tooltip"><span class="tooltiptext">Operational</span>
                             </div>
                         </td>
@@ -418,10 +415,13 @@
                         <td>
                             <div class="timelinebox-yellow" id="tooltip"><span class="tooltiptext">Partial Outage</span></div>
                         </td>
+                        <td>
+                            <div class="timelinebox-green" id="tooltip"><span class="tooltiptext">Operational</span></div>
+                        </td>
                     </table>
                 </div>
             </div>
-            <p style="font-size: x-small;"><b>Last server update:</b> <i>20th of September 2024</i> <b>at</b> <i>00:00 AEST</i></p>
+            <p style="font-size: x-small;"><b>Last server update:</b> <i>21st of September 2024</i> <b>at</b> <i>09:00 AEST</i></p>
             <a href="https://drageno01.github.io/?chat"><button id="returnHome">Return to Homepage</button></a>
         </div>
     </center>
