--- a/projects/mainprojects/drage-chat/status.html
+++ b/projects/mainprojects/drage-chat/status.html
@@ -129,7 +129,7 @@
                 <td><div class="timelinebox-green" id="tooltip"><span class="tooltiptext">Operational</span></div></td>
             </table>
             <br><br>
-            <div class="timelines">
+            <!-- <div class="timelines">
                 <h2>Overall <i style="font-size: x-small;">Past 30 Days</i></h2>
                 <div class="overall">
                     <table>
@@ -420,9 +420,11 @@
                         </td>
                     </table>
                 </div>
-            </div>
-            <p style="font-size: x-small;"><b>Last server update:</b> <i>21st of September 2024</i> <b>at</b> <i>09:00 AEST</i></p>
+            </div> -->
+            <!-- <p style="font-size: x-small;"><b>Last server update:</b> <i>21st of September 2024</i> <b>at</b> <i>09:00 AEST</i></p> -->
+            <p>We are currently having issues showing the uptime for the chat service. We are working on fixing this issue.</p>
             <a href="https://drageno01.github.io/?chat"><button id="returnHome">Return to Homepage</button></a>
+            <br><br>
         </div>
     </center>
 
