--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
             if(window.location.href == "https://drageno01.github.io/?chatstatus" || window.location.href == "https://drageno01.github.io/#chatstatus"){
                 window.location.replace("https://drageno01.github.io/projects/mainprojects/drage-chat/status.html")
             }
+            if(window.location.href == "https://drageno01.github.io/?cs" || window.location.href == "https://drageno01.github.io/#cs"){
+                window.location.replace("https://drageno01.github.io/projects/mainprojects/cs/index.html")
+            }
         }
     </script>
 </html>
