--- a/projects/mainprojects/drage-chat/index.html
+++ b/projects/mainprojects/drage-chat/index.html
@@ -130,8 +130,13 @@
     </center>
   </div>
 
-  <center style="display: none;" id="staffButtons">
+  <center style="display: none;" id="audioOptions">
     <br>
+    <table>
+      <td><button id="audioMute" class="bg-indigo-600 px-2 py-1 text-sm text-white rounded-md">Mute Tab Sound</button></td>
+    </table>
+  </center>
+  <center style="display: none;" id="staffButtons">
     <table>
       <td><button class="bg-indigo-600 px-2 py-1 text-sm text-white rounded-md" onclick="window.open('https://forms.gle/xEntAFhwddWAgsAb7','_blank')">Bug Report Form</button></td>
       <td><button class="bg-indigo-600 px-2 py-1 text-sm text-white rounded-md" onclick="window.open('https://forms.gle/fGiDMQvJaDpyaWZA8','_blank')">User Report Form</button></td>
