--- a/projects/mainprojects/drage-chat/index.html
+++ b/projects/mainprojects/drage-chat/index.html
@@ -67,6 +67,7 @@
       <button id="joinButton" class="bg-indigo-600 px-2 py-1 text-sm text-white rounded-md">Join</button>
     </div>
     <p>Google&trade; Sign-In <b>Required</b></p>
+    <p style="font-size: xx-small;" id="clientVersion">Client Version: Loading | Server Version: Loading | Chat Status: Loading</p>
   </div>
 
   <div id="chatsView" class="w-64 h-96 mx-auto flex flex-col mt-10 hidden">
