--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
                 window.location.replace("https://drageno01.github.io/projects/sideprojects/notepad.html")
             }
             if(window.location.href == "https://drageno01.github.io/?articles" || window.location.href == "https://drageno01.github.io/#articles"){
-                window.location.replace("https://drageno01.github.io/articles/index.html")
+                window.location.replace("https://drageno01.github.io/404.html")
             }
             if(window.location.href == "https://drageno01.github.io/?articleLogin" || window.location.href == "https://drageno01.github.io/#articleLogin"){
-                window.location.replace("https://drageno01.github.io/articles/index.html")
+                window.location.replace("https://drageno01.github.io/404.html")
             }
             if(window.location.href == "https://drageno01.github.io/?oxley" || window.location.href == "https://drageno01.github.io/#oxley"){
                 window.location.replace("https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html")
             }
             if(window.location.href == "https://drageno01.github.io/?andersonmdt" || window.location.href == "https://drageno01.github.io/#andersonmdt"){
-                window.location.replace("https://drageno01.github.io/projects/mainprojects/AndersonStateRP/index.html")
+                window.location.replace("https://drageno01.github.io/404.html")
             }
             if(window.location.href == "https://drageno01.github.io/?mcc" || window.location.href == "https://drageno01.github.io/#mcc"){
                 window.location.replace("https://drageno01.github.io/projects/sideprojects/mcc/index.html")
