--- a/projects/mainprojects/drage-chat/index.html
+++ b/projects/mainprojects/drage-chat/index.html
@@ -9,6 +9,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="shortcut icon"
+    href="https://yt3.googleusercontent.com/UqMYqkzSVzqj9h_Fv3cj-P60co_6nbuEuaEuUiC5d3Bf9IyoHKDaZi584ICJnqsNzZ9SHN6UTg=s900-c-k-c0x00ffffff-no-rj"
+    type="image/x-icon">
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none';" /> -->
     <style>
         .showUserId {
@@ -40,19 +43,17 @@
         <div class="container mt-3">
             <div class="alert alert-danger alert-dismissible fade show" id="usageshutdown" style="display: none;">
                 <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-                <strong>Oh no!</strong> We have currently shutdown our servers for some maintenance. Please be patient
-                wit us while we fix this issue!
+                <strong>Oh no!</strong> We have currently shutdown our servers for some maintenance. Please be patient wit us
+                while we fix this issue!
             </div>
 
             <div class="alert alert-warning alert-dismissible fade show" id="outofdateclient" style="display: none;">
                 <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-                <strong>Hey!</strong> If you are seeing this message, it means that you are viewing an outdated version!
-                Follow <a href=""><u>these (CLICK ME)</u></a> steps in order to continue using out platform!
+                <strong>Hey!</strong> If you are seeing this message, it means that you are viewing an outdated version! Click the button to continue: <button onclick="window.location.reload(true)" style="background-color: rgb(103, 92, 0) !important; width: 70px !important; height: 30px !important; border-radius: 5px !important; color: white !important;">Reload</button>
             </div>
             <div class="alert alert-light alert-dismissible fade show" id="patreonThanks" style="display: none;">
                 <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-                <strong>Thank you!</strong> Thank you for being a Patreon member. We have given you some extra perks for
-                this. (Perks: VIP Chat Tag)
+                <strong>Thank you!</strong> Thank you for being a Patreon member. We have given you some extra perks for this. (Perks: VIP Chat Tag)
             </div>
             <!-- <div class="alert alert-danger alert-dismissible fade show">
       <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
@@ -122,9 +123,8 @@
                 </ul>
             </div>
             <div class="input h-11 w-full flex border border-slate-200 rounded-md">
-                <input id="messageInput" type="text" class="outline-none flex-1 px-1"
-                    placeholder="Type a message to send..." maxlength="100"></input>
-                <div class="p-1">
+                <input id="messageInput" type="text" class="outline-none flex-1 px-1" placeholder="Type a message to send..." maxlength="100"></input>
+          <div class="p-1">
                     <button id="sendButton" class="bg-indigo-600 p-2 rounded-lg">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="black" class="w-4 h-4">
@@ -144,8 +144,9 @@
         <center style="display: none;" id="audioOptions">
             <br>
             <table>
-                <td><button id="audioMute" class="bg-indigo-600 px-2 py-1 text-sm text-white rounded-md">Mute Tab
-                        Sound</button></td>
+                <td>
+                    <button id="audioMute" class="bg-indigo-600 px-2 py-1 text-sm text-white rounded-md">Mute Tab Sound</button>
+                </td>
             </table>
         </center>
         <center style="display: none;" id="staffButtons">
@@ -160,10 +161,8 @@
         </center>
     </div>
 
-
     <div id="emergency" style="display: none;">
-        <img src="https://drageno01.github.io/projects/mainprojects/drage-chat/seqta learn.png"
-            style="width: 100dvw; height: 100dvh;">
+        <img src="https://drageno01.github.io/projects/mainprojects/drage-chat/seqta learn.png" style="width: 100dvw; height: 100dvh;">
     </div>
 
     <script>
@@ -174,11 +173,11 @@
         function keydown(evt) {
             if (!evt) evt = event;
             if (evt.altKey) {
-                if (!showingImage) {
+                if(!showingImage){
                     document.getElementById("emergency").style.display = "block";
                     document.getElementById("mainapp").style.display = "none";
                     showingImage = true;
-                } else {
+                }else {
                     document.getElementById("emergency").style.display = "none";
                     document.getElementById("mainapp").style.display = "block";
                     showingImage = false;
