--- a/projects/mainprojects/drage-chat/index.html
+++ b/projects/mainprojects/drage-chat/index.html
@@ -162,7 +162,7 @@
     </div>
 
     <div id="emergency" style="display: none;">
-        <img src="https://drageno01.github.io/projects/mainprojects/drage-chat/seqta learn.png" style="width: 100dvw; height: 100dvh;">
+        <img src="https://drageno01.github.io/projects/mainprojects/drage-chat/seqtalearn.png" style="width: 100dvw; height: 100dvh;">
     </div>
 
     <script>
