--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
             font-family: 'Lilita One',cursive;
             font-size: 50px;
         }
+
+        .buttondiv button{
+            width: 150px;
+            height: 100px;
+            border-radius: 10px;
+            border: 0;
+            background-color: #373737;
+            color: white;
+            font-size: large;
+        }
+
+        .buttondiv button:hover {
+            background-color: #5b5b5b;
+        }
     </style>
 </head>
 
@@ -41,30 +55,14 @@
     <br><br><br><br><br>
     <center style="color: white;">
         <h1 id="title">WELCOME</h1>
-        <p>What is this site?</p>
-        <table border="1" style="text-align: center; width: 40%;background-color: #373737;">
-            <tr>
-                <th style="width: 50%; font-family: '',cursive;"><h2>Question</h2></th>
-                <th style="width: 50%; font-family: '',cursive;"><h2>Answer</h2></th>
-            </tr>
-            <tr>
-                <td><p>What is this website?</p></td>
-                <td><p>This is the GitHub page for DRAGEno01.</p></td>
-            </tr>
-            <tr>
-                <td><p>What is this website used for?</p></td>
-                <td><p>To share and view projects.</p></td>
-            </tr>
-            <tr>
-                <td><p>What project can I view now?</p></td>
-                <td><p>Try this notepad <a href="?notepad">here</a>.</p></td>
-            </tr>
-        </table>
+        <p>Perhaps you were looking for something else... do any of these match what you need?</p><br>
+        <div id="buttondiv" class="buttondiv">
+            <a href="?notepad"><button>Online Notepad</button></a>
+            <a href="?chat"><button>DRAGE Chat</button></a>
+            <a href="?cs"><button>DRAGE-CS</button></a>
+        </div>
         <br><br>
         <p>You are on: <i id="web"></i></p>
-        <br>
-        <p>What does that mean above this text?</p>
-        <p>It means that you are not on a page that has a project on it.<br>Please change the webaddress to view my work.</p>
     </center>
     <script>
         document.getElementById("web").innerHTML = window.location.href
