--- a/projects/mainprojects/cs/index.html
+++ b/projects/mainprojects/cs/index.html
@@ -212,14 +212,12 @@
             <div class="card-grid">
                 <div class="card">
                     <h3>A Second Player</h3>
-                    <p>We are still looking to fill up 4 more slots for the A-Team, and we may have found the next
-                        one...</p>
+                    <p>We are still looking to fill up 3 more slots for the A-Team. Oceania players only.</p>
                     <a href="#">Read More</a>
                 </div>
                 <div class="card">
-                    <h3>New Player for the B-Team</h3>
-                    <p>Excited to announce a new addition to our roster. Since we are looking to fill up the A-Team,
-                        they have been moved to the A-Team roster.</p>
+                    <h3>New Player for the A-Team</h3>
+                    <p>Excited to announce a new addition to our roster. Imapotato has shown us that he is amazing with a wide veriety of weapons, but mainly scoped weapons.</p>
                     <a href="#">Read More</a>
                 </div>
                 <div class="card">
@@ -239,7 +237,7 @@
         </section>
 
         <section id="roster" class="container">
-            <h2>Our Roster</h2>
+            <h2>Our A-Team Roster</h2>
             <div class="roster-grid">
                 <div class="roster-item">
                     <h3>DRAGEno01</h3>
@@ -275,5 +273,9 @@
             <p>&copy; 2024 DRAGE-CS Esports Team. All rights reserved.</p>
         </div>
     </footer>
+
+    <script>
+        window.history.pushState("pageTitle", "DRAGE-CS", "/?dragecs");
+    </script>
 </body>
 </html>
