--- a/projects/mainprojects/cs/index.html
+++ b/projects/mainprojects/cs/index.html
@@ -275,7 +275,7 @@
     </footer>
 
     <script>
-        window.history.pushState("pageTitle", "DRAGE-CS", "/?dragecs");
+        window.history.pushState("pageTitle", "DRAGE-CS", "/?cs");
     </script>
 </body>
 </html>
