--- a/projects/mainprojects/cs/index.html
+++ b/projects/mainprojects/cs/index.html
@@ -241,27 +241,27 @@
             <div class="roster-grid">
                 <div class="roster-item">
                     <h3>DRAGEno01</h3>
-                    <img src="https://avatars.akamai.steamstatic.com/fef49e7fa7e1997310d705b2a6158ff8dc1cdfeb_full.jpg">
+                    <img src="https://preview.redd.it/imrpoved-steam-default-avatar-v0-ffxjnceu7vf81.png?width=640&crop=smart&auto=webp&s=0f8cbc4130a94fc83f19418f1a734209108c2a4b">
                     <p>Role: In-Game Leader</p>
                 </div>
                 <div class="roster-item">
                     <h3>Imapotato</h3>
-                    <img src="https://avatars.akamai.steamstatic.com/fef49e7fa7e1997310d705b2a6158ff8dc1cdfeb_full.jpg">
+                    <img src="https://preview.redd.it/imrpoved-steam-default-avatar-v0-ffxjnceu7vf81.png?width=640&crop=smart&auto=webp&s=0f8cbc4130a94fc83f19418f1a734209108c2a4b">
                     <p>Role: AWPer</p>
                 </div>
                 <div class="roster-item">
                     <h3>Empty</h3>
-                    <img src="https://avatars.akamai.steamstatic.com/fef49e7fa7e1997310d705b2a6158ff8dc1cdfeb_full.jpg">
+                    <img src="https://preview.redd.it/imrpoved-steam-default-avatar-v0-ffxjnceu7vf81.png?width=640&crop=smart&auto=webp&s=0f8cbc4130a94fc83f19418f1a734209108c2a4b">
                     <p>Role: Entry Fragger</p>
                 </div>
                 <div class="roster-item">
                     <h3>Empty</h3>
-                    <img src="https://avatars.akamai.steamstatic.com/fef49e7fa7e1997310d705b2a6158ff8dc1cdfeb_full.jpg">
+                    <img src="https://preview.redd.it/imrpoved-steam-default-avatar-v0-ffxjnceu7vf81.png?width=640&crop=smart&auto=webp&s=0f8cbc4130a94fc83f19418f1a734209108c2a4b">
                     <p>Role: Support</p>
                 </div>
                 <div class="roster-item">
                     <h3>Empty</h3>
-                    <img src="https://avatars.akamai.steamstatic.com/fef49e7fa7e1997310d705b2a6158ff8dc1cdfeb_full.jpg">
+                    <img src="https://preview.redd.it/imrpoved-steam-default-avatar-v0-ffxjnceu7vf81.png?width=640&crop=smart&auto=webp&s=0f8cbc4130a94fc83f19418f1a734209108c2a4b">
                     <p>Role: Lurker</p>
                 </div>
             </div>
