--- a/projects/mainprojects/drage-chat/index.html
+++ b/projects/mainprojects/drage-chat/index.html
@@ -55,6 +55,10 @@
                 <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                 <strong>Thank you!</strong> Thank you for being a Patreon member. We have given you some extra perks for this. (Perks: VIP Chat Tag)
             </div>
+            <div class="alert alert-primary alert-dismissible fade show" id="twitchlive" style="display: none;">
+        <!-- <button type="button" class="btn-close" data-bs-dismiss="alert"></button> -->
+        <strong>LIVE CONTENT!</strong> DRAGEno01 is now live on Twitch. <a href="https://twitch.tv/DRAGEno01" target="_blank"><button style="background-color: rgb(97, 0, 195) !important; width: 100px !important; height: 30px !important; border-radius: 5px !important; color: white !important;">Watch Now</button></a>
+      </div>
             <!-- <div class="alert alert-danger alert-dismissible fade show">
       <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
       <strong>Systems Down</strong> There is currently an issue with our servers. We will be back once we have patched
