--- a/projects/mainprojects/drage-chat/status.html
+++ b/projects/mainprojects/drage-chat/status.html
@@ -125,8 +125,8 @@
             <h1 id="title">DRAGE Chat</h1>
             <br><br><br>
             <table>
-                <td><h1>Current Status:  </h1></td>
-                <td><div class="timelinebox-green" id="tooltip"><span class="tooltiptext">Operational</span></div></td>
+                <td><h1>Current Overall Status:  </h1></td>
+                <td><img width="20px"><div class="timelinebox-red" id="tooltip"><span class="tooltiptext">Major Outage</span></div></td>
             </table>
             <br><br>
             <!-- <div class="timelines">
@@ -422,14 +422,14 @@
                 </div>
             </div> -->
             <!-- <p style="font-size: x-small;"><b>Last server update:</b> <i>21st of September 2024</i> <b>at</b> <i>09:00 AEST</i></p> -->
-            <p>We are currently having issues showing the uptime for the chat service. We are working on fixing this issue.</p>
+            <p>This page will no longer be supported from 31st of October 2024.</p>
             <a href="https://drageno01.github.io/?chat"><button id="returnHome">Return to Homepage</button></a>
             <br><br>
         </div>
     </center>
 
     <script>
-        window.history.pushState("pageTitle", "Status - DRAGE Chat", "/?chatstatus");
+        // window.history.pushState("pageTitle", "Status - DRAGE Chat", "/?chatstatus");
     </script>
 </body>
 </html>
