--- a/projects/mainprojects/drage-chat/index.html
+++ b/projects/mainprojects/drage-chat/index.html
@@ -43,7 +43,7 @@
         <div class="container mt-3">
             <div class="alert alert-danger alert-dismissible fade show" id="usageshutdown" style="display: none;">
                 <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-                <strong>Oh no!</strong> We have currently shutdown our servers for some maintenance. Please be patient wit us
+                <strong>Oh no!</strong> We have currently shutdown our servers for some maintenance. Please be patient with us
                 while we fix this issue!
             </div>
 
@@ -139,14 +139,13 @@
                 </div>
             </div>
             <center>
-                <p style="font-size: xx-small;">There is a 100 character limit per message and a 10 second cooldown to
+                <p style="font-size: xx-small;">There is a 100 character limit per message and a 5 second cooldown to
                     prevent
                     spam.</p>
             </center>
         </div>
 
         <center style="display: none;" id="audioOptions">
-      <br>
       <table>
         <td>
           <button id="audioMute" class="bg-indigo-600 px-2 py-1 text-sm text-white rounded-md">Mute Tab Sound</button>
