--- a/projects/mainprojects/drage-chat/status.html
+++ b/projects/mainprojects/drage-chat/status.html
@@ -126,7 +126,7 @@
             <br><br><br>
             <table>
                 <td><h1>Current Overall Status:  </h1></td>
-                <td><img width="20px"><div class="timelinebox-red" id="tooltip"><span class="tooltiptext">Major Outage</span></div></td>
+                <td><img width="20px"><div class="timelinebox-green" id="tooltip"><span class="tooltiptext">Operational</span></div></td>
             </table>
             <br><br>
             <!-- <div class="timelines">
@@ -429,7 +429,7 @@
     </center>
 
     <script>
-        // window.history.pushState("pageTitle", "Status - DRAGE Chat", "/?chatstatus");
+        window.history.pushState("pageTitle", "Status - DRAGE Chat", "/?chatstatus");
     </script>
 </body>
 </html>
