--- a/projects/sideprojects/notepad.html
+++ b/projects/sideprojects/notepad.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-5327146535138725">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5327146535138725"
+        crossorigin="anonymous"></script>
     <title>Online Notepad</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Dosis&family=Kdam+Thmor+Pro&family=PT+Serif&family=Playpen+Sans&display=swap');
